--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "*"
 django-debug-toolbar = "*"
 psycopg = {extras = ["binary"], version = "*"}
+djangorestframework = "*"
 
 [dev-packages]
 
