Part 2.2: Advanced API Concepts

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ django = "*"
 django-debug-toolbar = "*"
 psycopg = {extras = ["binary"], version = "*"}
 djangorestframework = "*"
+drf-nested-routers = "*"
+django-filter = "*"
 
 [dev-packages]
 
