--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ psycopg = {extras = ["binary"], version = "*"}
 djangorestframework = "*"
 drf-nested-routers = "*"
 django-filter = "*"
+djoser = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 
