--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,8 @@ django-templated-mail = "*"
 redis = "*"
 celery = "*"
 flower = "*"
+requests = "*"
+django-redis = "*"
 
 [dev-packages]
 pytest = "*"
